# traccia-py

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  auto.py  cli.py  config.py  cost_resolver.py  identity.py  pricing_config.py  pricing_normalizer.py  pyproject.toml  runtime_config.py
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: publish.yml
context/: __init__.py  run_with_span.py  span_scope.py
data/: __init__.py  pricing_snapshot.json
exporter/: __init__.py  file_exporter.py  http_exporter.py
governance/: __init__.py  config.py  govern.py  policy.py
guardrails/: GUARDRAIL_DETECTION.md  __init__.py  constants.py  detectors.py  evaluator.py  helpers.py  schema.py
instrumentation/: anthropic.py  decorator.py  openai.py  requests.py
integrations/: __init__.py
integrations/crewai/: instrumentation.py
integrations/langchain/: __init__.py  callback.py  utils.py
integrations/openai_agents/: processor.py
metrics/: __init__.py  metrics.py  recorder.py
processors/: __init__.py  agent_enricher.py  cost_engine.py  cost_processor.py  guardrail_detector.py  redaction_processor.py
prompts/: __init__.py  cache.py  client.py  compile.py  prompt.py
scripts/: build_pricing_snapshot.py
tests/: test_agent_identity.py  test_auto_start.py  test_core_functionality.py  test_governance_policy.py  test_guardrail_detection.py  test_metrics.py  test_openai_agents_processor.py  test_pricing.py  test_prompts.py  test_redaction_processor.py  test_span_scope.py
