[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "traccia"
version = "0.1.14"
description = "Production-ready distributed tracing SDK for AI agents and LLM applications"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = [
    "tracing",
    "observability",
    "opentelemetry",
    "ai-agents",
    "llm",
    "distributed-tracing",
    "monitoring",
    "telemetry"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "tiktoken>=0.7.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-semantic-conventions>=0.40b0",
    "tomli>=2.0.0; python_version < '3.11'",
    "toml>=0.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/traccia-ai/traccia-py"
Documentation = "https://github.com/traccia-ai/traccia-py#readme"
Repository = "https://github.com/traccia-ai/traccia-py"
Issues = "https://github.com/traccia-ai/traccia-py/issues"
"Bug Tracker" = "https://github.com/traccia-ai/traccia-py/issues"

[tool.setuptools]
# Package files are in the current directory, map "traccia" package to "."
package-dir = {"traccia" = "."}
packages = [
    "traccia",
    "traccia.exporter",
    "traccia.instrumentation",
    "traccia.integrations",
    "traccia.integrations.langchain",
    "traccia.integrations.openai_agents",
    "traccia.integrations.crewai",
    "traccia.processors",
    "traccia.tracer",
    "traccia.context",
    "traccia.utils",
    "traccia.metrics",
]

[project.scripts]
traccia = "traccia.cli:main"
